--- a/app/views/game_templates/user_scissors.html.erb
+++ b/app/views/game_templates/user_scissors.html.erb
@@ -1,15 +1,10 @@
+<a href="/rock"> Play rock </a>
+<a href="/paper"> Play paper </a>
+<a href="/scissors"> Play scissors </a>
+
 <h1>We played scissors!</h1>
 
-<%comp_move= ["rock","paper", "scissors"].sample%>
-
 <h2>
-They played <%=comp_move%>!
-</h2>
+They played <%=@comp_move%>!</h2>
 
-<%if comp_move == "rock"%>
-   <h2>We lost!</h2>
-<% elsif comp_move == "paper"%>
-    <h2>We won!</h2>
-<%elsif comp_move == "scissors"%>
-   <h2>We tied!</h2>
-<%end%>
+<h2> <%=@outcome%>!</h2>
