--- a/app/views/game_templates/user_scissors.html.erb
+++ b/app/views/game_templates/user_scissors.html.erb
@@ -1,10 +1,7 @@
-<a href="/rock"> Play rock </a>
-<a href="/paper"> Play paper </a>
-<a href="/scissors"> Play scissors </a>
-
 <h1>We played scissors!</h1>
 
 <h2>
 They played <%=@comp_move%>!</h2>
 
 <h2> <%=@outcome%>!</h2>
+<a href="/"> Rules </a>
